--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -242,7 +242,7 @@
                     <div class="w-full sm:w-8/12 mb-10">
                         <div class="container mx-auto h-full sm:p-10">
                             <nav class="flex px-4 justify-between items-center">
-                                <div class="text-4xl font-bold">
+                                <div class="lg:text-4xl text-2xl font-bold">
                                     Workshops & Seminars<span class="text-green-700">.</span>
                                 </div>
                                 <div>
@@ -251,14 +251,14 @@
                             </nav>
                             <header class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0">
                                 <div class="w-full">
-                                    <h1 class="text-4xl lg:text-5xl font-bold">Elevate Your <span
+                                    <h1 class="text-3xl lg:text-4xl font-bold">Elevate Your <span
                                             class="text-green-700">Skills</span> with Our Workshops</h1>
                                     <div class="w-20 h-2 bg-green-700 my-4"></div>
-                                    <p class="text-xl mb-10">Participate in our regular workshops and seminars to
+                                    <p class="text-xl mb-10">Participate in our workshops and seminars to
                                         stay ahead in the IT world. Dive into the latest trends and technologies to
                                         enhance your expertise and career.</p>
                                     <a href="/events"
-                                        class="bg-green-500 text-white text-2xl font-medium px-4 py-2 rounded shadow">Discover
+                                        class="bg-green-500 text-white lg:text-2xl text-xl font-medium px-4 py-2 rounded shadow">Discover
                                         Workshops</a>
                                 </div>
                             </header>
@@ -274,7 +274,7 @@
                     <div class="w-full sm:w-8/12 mb-10">
                         <div class="container mx-auto h-full sm:p-10">
                             <nav class="flex px-4 justify-between items-center">
-                                <div class="text-4xl font-bold">
+                                <div class="lg:text-4xl text-2xl font-bold">
                                     Networking Events<span class="text-green-700">.</span>
                                 </div>
                                 <div>
@@ -283,7 +283,7 @@
                             </nav>
                             <header class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0">
                                 <div class="w-full">
-                                    <h1 class="text-4xl lg:text-5xl font-bold">Connect at Our <span
+                                    <h1 class="text-3xl lg:text-4xl font-bold">Connect at Our <span
                                             class="text-green-700">Networking Events</span></h1>
                                     <div class="w-20 h-2 bg-green-700 my-4"></div>
                                     <p class="text-xl mb-10">Join our networking events to meet IT professionals
@@ -304,7 +304,7 @@
                     <div class="w-full sm:w-8/12 mb-10">
                         <div class="container mx-auto h-full sm:p-10">
                             <nav class="flex px-4 justify-between items-center">
-                                <div class="text-4xl font-bold">
+                                <div class="lg:text-4xl text-2xl font-bold">
                                     Competitions<span class="text-green-700">.</span>
                                 </div>
                                 <div>
@@ -313,7 +313,7 @@
                             </nav>
                             <header class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0">
                                 <div class="w-full">
-                                    <h1 class="text-3xl lg:text-5xl font-bold">Showcase Your <span
+                                    <h1 class="text-3xl lg:text-4xl font-bold">Showcase Your <span
                                             class="text-green-700">Talent</span> in Competitions</h1>
                                     <div class="w-20 h-2 bg-green-700 my-4"></div>
                                     <p class="text-xl mb-10">Participate in thrilling competitions that challenge
@@ -332,7 +332,7 @@
             </div>
         </div>
 
-        <div class=" bg-gray-900 pt-12">
+        <div class=" bg-gray-900 pt-9 ">
             <div class="mx-auto w-full max-w-[1166px] px-4 xl:px-0">
                 <div class="flex flex-col justify-between sm:px-[18px] md:flex-row md:px-10">
                     <div class="md:w-[316px] ">
@@ -346,6 +346,7 @@
                             elit. Eos, fugit non. Incidunt dolorum adipisci, tempore asperiores nemo odio facere
                             officiis enim animi
                             placeat eaque nesciunt alias beatae id, at dicta.</p>
+
                     </div>
                     <div class="md:w-[316px] ">
                         <div class="mt-[23px] flex">
