--- a/myapp/views/about.hbs
+++ b/myapp/views/about.hbs
@@ -7,7 +7,7 @@
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kode+Mono:wght@400..700&display=swap"
@@ -15,17 +15,18 @@
     <title>About Us - init() IT Association</title>
     <style>
         /* General Styles */
-         html {
+        html {
             color-scheme: dark;
             /* or use 'dark' if you want your website to always be dark themed */
         }
-        nav
-        {
+
+        nav {
             font-family: "Kode Mono", monospace;
             font-optical-sizing: auto;
             font-weight: <weight>;
             font-style: normal;
         }
+
         main {
             display: flex;
             align-items: center;
@@ -50,7 +51,7 @@
         }
 
         /* Mobile Nav */
-        
+
 
         /* Ensure mobile nav links are styled and visible */
         #mobileNav {
@@ -208,13 +209,15 @@
         .cta button:hover {
             background-color: #E0E7FF;
         }
-@media (prefers-color-scheme: light) {
-  html {
-    color-scheme: dark; /* Force dark mode */
-  }
-}
-        
+
+        @media (prefers-color-scheme: light) {
+            html {
+                color-scheme: dark;
+                /* Force dark mode */
+            }
+        }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body class="bg-gray-900">
@@ -261,42 +264,174 @@
         </div>
     </nav>
 
+    <div class="relative bg-gray-800">
+        <div class="absolute inset-x-0 bottom-0">
+            <svg viewBox="0 0 224 12" fill="currentColor" class="w-full -mb-1 text-gray-900" preserveAspectRatio="none">
+                <path
+                    d="M0,0 C48.8902582,6.27314026 86.2235915,9.40971039 112,9.40971039 C137.776408,9.40971039 175.109742,6.27314026 224,0 L224,12.0441132 L0,12.0441132 L0,0 Z">
+                </path>
+            </svg>
+        </div>
+        <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20 ">
+            <div class="relative max-w-2xl sm:mx-auto sm:max-w-xl md:max-w-2xl sm:text-center">
+                <h2
+                    class="mb-6 font-sans text-3xl text-center font-bold tracking-tight text-white sm:text-4xl sm:leading-none">
+                    About Us
+                </h2>
+                <p class="mb-6 text-base text-indigo-200 md:text-lg">
+                    The Student Association of the Department of Information Technology at Amaljyothi College of
+                    Engineering fosters innovation, collaboration, and technical excellence among students. It aims to
+                    provide opportunities for skill development, leadership, and community engagement in the field of
+                    IT.
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="relative overflow-hidden bg-gray-900 pt-16 pb-32 space-y-24">
+        <div class="relative">
+            <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-2 lg:gap-24 lg:px-8 ">
+                <div class="mx-auto max-w-xl px-6 lg:mx-0 lg:max-w-none lg:py-16 lg:px-0 ">
+
+                    <div>
+                        <div>
+                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500">
+                                <i class="fas fa-bullseye"></i>
+                            </span>
+                        </div>
+
+                        <div class="mt-6">
+                            <h2 class="text-3xl font-bold tracking-tight text-white">
+                                Mission:
+                            </h2>
+                            <p class="mt-4 text-lg text-gray-300">
+                                To empower students by fostering innovation, collaboration, and technical excellence in
+                                the field of Information Technology. Through hands-on learning, community engagement,
+                                and leadership opportunities, we aim to create a supportive ecosystem that nurtures
+                                problem-solving skills, ethical decision-making, and a passion for technology-driven
+                                solutions.
+                            </p>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="mt-12 sm:mt-16 lg:mt-0">
+                    <div class="-mr-48 pl-6 md:-mr-16 lg:relative lg:m-0 lg:h-full lg:px-0">
+                        <img loading="lazy" width="647" height="486"
+                            class="w-full rounded-xl shadow-2xl ring-1 ring-black ring-opacity-5 lg:absolute lg:left-0 lg:h-full lg:w-auto lg:max-w-none"
+                            style="color:transparent"
+                            src="/images/mision.jpeg">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="relative">
+            <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-2 lg:gap-24 lg:px-8 ">
+                <div class="mx-auto max-w-xl px-6 lg:mx-0 lg:max-w-none lg:py-16 lg:px-0 lg:col-start-2">
+                    <div>
+                        <div>
+                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500">
+                                <i class="fas fa-eye"></i>
+
+                            </span>
+                        </div>
+                        <div class="mt-6">
+                            <h2 class="text-3xl font-bold tracking-tight text-white">
+                                Vision:
+                            </h2>
+                            <p class="mt-4 text-lg text-gray-300">
+                                To be a dynamic and inclusive student body that drives technological advancements,
+                                inspiring future leaders and innovators in Information Technology, while contributing to
+                                the local and global tech community. We strive to create a culture of continuous
+                                learning, creativity, and social responsibility that prepares students for the
+                                challenges of the digital era.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-12 sm:mt-16 lg:mt-0">
+                    <div class="-ml-48 pr-6 md:-ml-16 lg:relative lg:m-0 lg:h-full lg:px-0">
+                        <img alt="Inbox user interface" loading="lazy" width="647" height="486"
+                            class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none"
+                            style="color:transparent"
+                            src="/images/vision.jpeg">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="bg-gray-900">
-      <header class="bg-gray-900 text-white text-center py-12">
-        <h1 class="text-4xl font-bold mt-16">About Us</h1>
-      </header>
 
-      <section class="text-center py-12 px-4 bg-gray-800">
-        <h2 class="text-2xl font-bold">Mission And Values</h2>
-        <p class="mt-4 text-gray-700 max-w-2xl mx-auto">
-          Our mission is to provide exceptional healthcare services with a focus on availability, reliability, and support.
-        </p>
-        <div class="flex justify-center space-x-8 mt-8 animate-fadeIn">
-          <div class="transition transform hover:scale-110">
-            <h3 class="text-xl font-bold" >10</h3>
-            <p class="text-gray-700">Core Members</p>
-          </div>
-          <div class="transition transform hover:scale-110">
-            <h3 class="text-xl font-bold" >300+</h3>
-            <p class="text-gray-700">Members</p>
-          </div>
-        </div>
-      </section>
+        <section id="features"
+            class="relative block px-6 py-10 md:py-20 md:px-10  border-t border-b border-neutral-900 bg-gray-900">
 
-      <section class="bg-gray-500 text-white py-12 px-4">
-        <h2 class="text-2xl font-bold text-center">Our Vision</h2>
-        <p class="mt-4 text-center max-w-2xl mx-auto">
-          Healthcare anytime, anywhere. We aim to revolutionize the healthcare industry by making quality healthcare accessible to everyone.
-        </p>
-      </section>
 
-      
+            <div class="relative mx-auto max-w-5xl text-center">
+                <span class="text-gray-400 my-3 flex items-center justify-center font-medium uppercase tracking-wider">
+                    What we foster
+                </span>
+                <h2
+                    class="block w-full bg-gradient-to-b from-white to-gray-400 bg-clip-text font-bold text-transparent text-3xl sm:text-4xl">
+                    Core Values
+                </h2>
 
-      <footer class="bg-green-500 text-white text-center py-8">
-        <p>&copy; Copyright [Your Name] . All rights reserved. Made By Binary Boats⛵</p>
-      </footer>
+            </div>
+
+
+            <div class="relative mx-auto max-w-7xl z-10 grid grid-cols-1 gap-10 pt-14 sm:grid-cols-1 lg:grid-cols-3">
+                <div class="rounded-md border border-neutral-800 bg-neutral-900/50 p-8 text-center shadow">
+                    <div class="button-text mx-auto flex h-12 w-12 items-center justify-center rounded-md border "
+                        style="background-image: linear-gradient(rgb(80, 70, 229) 0%, rgb(43, 49, 203) 100%); border-color: rgb(93, 79, 240);">
+                        <i class="fas fa-lightbulb"></i>
+                    </div>
+                    <h3 class="mt-6 text-gray-400">Innovation</h3>
+                    <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400"> Encouraging creative
+                        problem-solving and forward-thinking approaches to technology. </p>
+                </div>
+
+
+                <div class="rounded-md border border-neutral-800 bg-neutral-900/50 p-8 text-center shadow">
+                    <div class="button-text mx-auto flex h-12 w-12 items-center justify-center rounded-md border "
+                        style="background-image: linear-gradient(rgb(80, 70, 229) 0%, rgb(43, 49, 203) 100%); border-color: rgb(93, 79, 240);">
+                        <i class="fas fa-users"></i>
+                    </div>
+                    <h3 class="mt-6 text-gray-400">Collaboration</h3>
+                    <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400">Fostering teamwork and
+                        partnerships within the student community and industry.
+                    </p>
+                </div>
+
+
+                <div class="rounded-md border border-neutral-800 bg-neutral-900/50 p-8 text-center shadow">
+                    <div class="button-text mx-auto flex h-12 w-12 items-center justify-center rounded-md border "
+                        style="background-image: linear-gradient(rgb(80, 70, 229) 0%, rgb(43, 49, 203) 100%); border-color: rgb(93, 79, 240);">
+                        <i class="fas fa-award"></i>
+                    </div>
+                    <h3 class="mt-6 text-gray-400">Excellence</h3>
+                    <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400">
+                        Striving for high standards in academic and extracurricular pursuits.
+                    </p>
+                </div>
+            </div>
+
+            <div class="absolute bottom-0 left-0 z-0 h-1/3 w-full border-b"
+                style="background-image: linear-gradient(to right top, rgba(33, 30, 82, 0.2) 0%, transparent 50%, transparent 100%); border-color: rgba(92, 79, 240, 0.2);">
+            </div>
+            <div class="absolute bottom-0 right-0 z-0 h-1/3 w-full"
+                style="background-image: linear-gradient(to left top, rgba(63, 14, 14, 0.2) 0%, transparent 50%, transparent 100%); border-color: rgba(92, 79, 240, 0.2);">
+            </div>
+
+        </section>
     </div>
+
+
+
 
     <script>
         // Navbar scroll effect
